# sawdust-watcher

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
sawdust_watcher/: config.ini  detection.py  gpio_control.py  main.py  noise_detector.py  optimize.py
sawdust_watcher/prod/: detection.py  main.py
sawdust_watcher/scripts/: README.md  sawdust_watcher_boot.sh
tests/: test_detection.py
